force-app/main/default/objects/Activity/fields/AccessMethod__c.field-meta.xml
<CustomField>
    <fullName>AccessMethod__c</fullName>
    <label>アクセス手段</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>往訪</fullName>
            </value>
            <value>
                <fullName>ベルフェイス</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>