force-app/main/default/objects/Activity/fields/CollisionCompetitiveQuotesExistence__c.field-meta.xml
<CustomField>
    <fullName>CollisionCompetitiveQuotesExistence__c</fullName>
    <label>競合の相見積もり有無</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LL-見積受領前</fullName>
            </value>
            <value>
                <fullName>LL-見積受領後</fullName>
            </value>
            <value>
                <fullName>LS-見積受領前</fullName>
            </value>
            <value>
                <fullName>LS-見積受領後</fullName>
            </value>
            <value>
                <fullName>その他-見積受領前</fullName>
            </value>
            <value>
                <fullName>その他-見積受領後</fullName>
            </value>
            <value>
                <fullName>他社検討なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>