force-app/main/default/objects/Activity/fields/CollisionIntroductionStatus__c.field-meta.xml
<CustomField>
    <fullName>CollisionIntroductionStatus__c</fullName>
    <label>競合の導入状況</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>使っていない</fullName>
            </value>
            <value>
                <fullName>LL</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>判例検索サービス</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>メールでのやり取りのため未聴取（法人問い合わせ）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>