force-app/main/default/objects/Activity/fields/ContactMethod__c.field-meta.xml
<CustomField>
    <fullName>ContactMethod__c</fullName>
    <label>連絡手段</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>