force-app/main/default/objects/Activity/fields/LeadStatus__c.field-meta.xml
<CustomField>
    <fullName>LeadStatus__c</fullName>
    <label>リード 状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未着手</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>対応終了</fullName>
            </value>
            <value>
                <fullName>対応保留</fullName>
            </value>
            <value>
                <fullName>取引開始済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>