force-app/main/default/objects/Activity/fields/MeasureList__c.field-meta.xml
<CustomField>
    <fullName>MeasureList__c</fullName>
    <label>施策リスト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>マーケリード（新規）</fullName>
            </value>
            <value>
                <fullName>マーケリード（リサイクル）</fullName>
            </value>
            <value>
                <fullName>IS追客リード</fullName>
            </value>
            <value>
                <fullName>過去失注先</fullName>
            </value>
            <value>
                <fullName>アポキャン</fullName>
            </value>
            <value>
                <fullName>メールクリックリード</fullName>
            </value>
            <value>
                <fullName>トラッキングリード</fullName>
            </value>
            <value>
                <fullName>広告チームコンテンツ申込リード</fullName>
            </value>
            <value>
                <fullName>過去法人問い合わせ</fullName>
            </value>
            <value>
                <fullName>新規法人問い合わせ</fullName>
            </value>
            <value>
                <fullName>セミナー参加アンケート回答者</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
            <value>
                <fullName>BLL説明会閲覧</fullName>
                <isActive>false</isActive>
                <label>BLL説明会閲覧</label>
            </value>
            <value>
                <fullName>BLL資料過去DL者（3ヶ月以内）</fullName>
                <isActive>false</isActive>
                <label>BLL資料過去DL者（3ヶ月以内）</label>
            </value>
            <value>
                <fullName>ナーチャリングリード（リサーチに関する無料コンテンツ配信等）</fullName>
                <isActive>false</isActive>
                <label>ナーチャリングリード（リサーチに関する無料コンテンツ配信等）</label>
            </value>
            <value>
                <fullName>導入事例ページ訪問者</fullName>
                <isActive>false</isActive>
                <label>導入事例ページ訪問者</label>
            </value>
            <value>
                <fullName>広告チームイベントアンケート回答者</fullName>
                <isActive>false</isActive>
                <label>広告チームイベントアンケート回答者</label>
            </value>
            <value>
                <fullName>有料セミナー申込</fullName>
                <isActive>false</isActive>
                <label>有料セミナー申込</label>
            </value>
            <value>
                <fullName>興味比較層へのリライトメールクリック</fullName>
                <isActive>false</isActive>
                <label>興味比較層へのリライトメールクリック</label>
            </value>
            <value>
                <fullName>過去BLL説明会参加者</fullName>
                <isActive>false</isActive>
                <label>過去BLL説明会参加者</label>
            </value>
            <value>
                <fullName>過去セミナー参加アンケート興味あり回答者</fullName>
                <isActive>false</isActive>
                <label>過去セミナー参加アンケート興味あり回答者</label>
            </value>
            <value>
                <fullName>過去導入事例DL者</fullName>
                <isActive>false</isActive>
                <label>過去導入事例DL者</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>