force-app/main/default/objects/Activity/fields/NGReason__c.field-meta.xml
<CustomField>
    <fullName>NGReason__c</fullName>
    <label>NG理由</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadStatusDetail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>商談中</fullName>
            </value>
            <value>
                <fullName>取引実績あり</fullName>
            </value>
            <value>
                <fullName>重複リード</fullName>
            </value>
            <value>
                <fullName>対象外（個人/学生/外国人/その他）</fullName>
            </value>
            <value>
                <fullName>連絡先不可</fullName>
            </value>
            <value>
                <fullName>過去クレーム（窓口統一/架電不可）</fullName>
            </value>
            <value>
                <fullName>活動終了（5回追客）</fullName>
            </value>
            <value>
                <fullName>受付ブロック</fullName>
            </value>
            <value>
                <fullName>要件を伝える前にNG</fullName>
            </value>
            <value>
                <fullName>要件を伝えたが興味なし</fullName>
            </value>
            <value>
                <fullName>興味はあるがNG</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>