force-app/main/default/objects/Activity/fields/PhaseBeforeWork__c.field-meta.xml
<CustomField>
    <fullName>PhaseBeforeWork__c</fullName>
    <label>活動前フェーズ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>