force-app/main/default/objects/Activity/fields/PhaseDetailBeforeWork__c.field-meta.xml
<CustomField>
    <fullName>PhaseDetailBeforeWork__c</fullName>
    <label>活動前フェーズ詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>