force-app/main/default/objects/Activity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>商品</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T-4OO</fullName>
            </value>
            <value>
                <fullName>BUSINESS LAWYERS COMPLIANCE</fullName>
            </value>
            <value>
                <fullName>BUSINESS LAWYERS LIBRARY</fullName>
            </value>
            <value>
                <fullName>LAWGUE</fullName>
            </value>
            <value>
                <fullName>LegalForce</fullName>
            </value>
            <value>
                <fullName>hubble</fullName>
            </value>
            <value>
                <fullName>Net Learning</fullName>
            </value>
            <value>
                <fullName>NTT data</fullName>
            </value>
            <value>
                <fullName>Reliefsign</fullName>
            </value>
            <value>
                <fullName>Risk Monster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>