force-app/main/default/objects/Activity/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>課題</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>法務の情報収集に困っている</fullName>
            </value>
            <value>
                <fullName>コンプラの情報収集に困っている</fullName>
            </value>
            <value>
                <fullName>その他の情報収集に困っている</fullName>
            </value>
            <value>
                <fullName>人手不足</fullName>
            </value>
            <value>
                <fullName>時間が足りない（業務過多）</fullName>
            </value>
            <value>
                <fullName>法務組織のスキルアップ</fullName>
            </value>
            <value>
                <fullName>費用を削減・効率化したい</fullName>
            </value>
            <value>
                <fullName>メールでのやり取りのため未聴取（法人問い合わせ）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>