force-app/main/default/objects/Activity/fields/ToExpectInBLL__c.field-meta.xml
<CustomField>
    <fullName>ToExpectInBLL__c</fullName>
    <label>BLLに期待すること</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>リサーチサービス（検索サービス）</fullName>
            </value>
            <value>
                <fullName>電子書籍サービス</fullName>
            </value>
            <value>
                <fullName>教育動画（スタンダード動画）</fullName>
            </value>
            <value>
                <fullName>セミナーの割引価格</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>