force-app/main/default/objects/Activity/fields/WayOfSettingBudget__c.field-meta.xml
<CustomField>
    <fullName>WayOfSettingBudget__c</fullName>
    <label>予算の取り方</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>予算検討が必要</fullName>
            </value>
            <value>
                <fullName>予算検討は必要なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>