force-app/main/default/objects/Activity/fields/WorkTarget__c.field-meta.xml
<CustomField>
    <fullName>WorkTarget__c</fullName>
    <label>活動目的</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>アポイント</fullName>
            </value>
            <value>
                <fullName>資料送付</fullName>
            </value>
            <value>
                <fullName>新規商談</fullName>
            </value>
            <value>
                <fullName>定期フォロー</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>